--- a/Entregables/Informe.ipynb
+++ b/Entregables/Informe.ipynb
@@ -107,7 +107,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A partir de este punto, se comienza a calcular el capacitor C4, de forma de cumplir el enunciado y poder cargar con 50ohm a la salida. Para ello, se define que XC4 debe ser aproximadamente 10 veces menor a RL y se asume:"
+    "A partir de este punto, se comienza a calcular el capacitor C4, de forma de cumplir el enunciado y poder cargar con 50ohm a la salida. Para ello, se define que $X_{C4}$ debe ser aproximadamente 10 veces menor a $R_L$ y se asume:"
    ]
   },
   {
@@ -188,7 +188,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Se continúa calculando la capacidad equivalente de los capacitores C1 y C2. Hasta aquí no se considera Cvariable en el diseño del oscilador.\n",
+    "Se continúa calculando la capacidad equivalente de los capacitores $C_1$ y $C_2$. Hasta aquí no se considera Cvariable en el diseño del oscilador.\n",
     "\n",
     "$$ C_{eq_1} = C_{eq} - C_{eq_2} $$\n",
     "\n",
@@ -235,7 +235,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Como se trabaja con una bobina ideal, se procede a calcular su Rt y también la resistencia RL reflejada, para obtener la Rtotal siendo el paralelo entre ambas:\n",
+    "Como se trabaja con una bobina ideal, se procede a calcular su $R_T$ y también la resistencia $R_L$ reflejada, para obtener la Rtotal siendo el paralelo entre ambas:\n",
     "\n",
     "$$ R_T = Q_0 2 \\pi f_0 L $$\n",
     "\n",
@@ -268,7 +268,6 @@
     "\n",
     "R_TOTAL = (R_T * R_L_PRIMA)/(R_T + R_L_PRIMA)\n",
     "R_TOTAL_eng = EngNumber(R_TOTAL)\n",
-    "\n",
     "\n",
     "\n",
     "print(\"R_T: \"           + str(R_T_eng) + ohm_symbol)\n",
