--- a/Entregables/Informe.ipynb
+++ b/Entregables/Informe.ipynb
@@ -430,7 +430,7 @@
    "source": [
     "Desde Scope -> Go to Performance, podemos apreciar que se encuentra trabajando sobre los $12MHz$:\n",
     "\n",
-    "![performance de circuito ideal con fuente de corriente.png](<attachment:Recursos/performance de circuito ideal con fuente de corriente.png>)"
+    "![performance de circuito ideal con fuente de corriente.png](<attachment:Recursos\\performance de circuito ideal con fuente de corriente.png>)"
    ]
   },
   {
