--- a/Entregables/Informe.ipynb
+++ b/Entregables/Informe.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -641,14 +641,26 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f_0_final = 11.93MHz\n"
+     ]
+    }
+   ],
    "source": [
-    "#### Conclusiones matemáticas\n",
+    "C_variable = 100 * 10**(-12) * 0 # Revisar el valor de C_variable porque está matando la frecuencia de oscilación.\n",
+    "C_eq_final = C_eq_1_prima + C_eq_2_prima + C_variable\n",
+    "f_0_final = 1 / (2 * math.pi * math.sqrt(C_eq_final * L))\n",
     "\n",
-    "[TODO.]: # (Se puede observar que $V_{sal}'$ se mantiene en $1.03V$ en vez de $1V$ de tensión pico a la salida del colector)\n",
+    "f_0_final_eng = EngNumber(f_0_final)\n",
     "\n",
-    "\n"
+    "print(\"f_0_final = \" + str(f_0_final_eng) + \"Hz\")\n"
    ]
   },
   {
@@ -696,7 +708,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Donde se observa que el circuito oscila a una $f_0$ = 1.1901 MHZ "
+    "Donde se observa que el circuito oscila a una $f_0$ = 11.901 MHZ "
    ]
   },
   {
@@ -743,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -797,7 +809,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Se observa que $f_0 = 1.1901 MHz$, por lo que al agregar un capacitor variable en el futuro, probablemente la respuesta se aleje de los $12MHz$ solicitados"
+    "Se observa que $f_0 = 11.901 MHz$, por lo que al agregar un capacitor variable en el futuro, probablemente la respuesta se aleje de los $12MHz$ solicitados"
    ]
   },
   {
